Fix: CodeRabbit 리뷰 반영 - JWT role 검증 및 GIN 인덱스
- JwtTokenProvider: role claim이 없거나 빈 값이면 JwtException 발생
- JwtAuthenticationFilter: JwtException 처리하여 401 반환
- V27 마이그레이션: pg_trgm 확장 + GIN 인덱스로 변경
  - B-Tree는 LIKE '%keyword%' 지원 안함
  - GIN + gin_trgm_ops로 contains 검색 최적화

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>