@@ -13,8 +13,9 @@ import org.springframework.stereotype.Component;
 import org.springframework.util.StringUtils;
 import org.springframework.web.filter.OncePerRequestFilter;
 
+import io.jsonwebtoken.JwtException;
+
 import java.io.IOException;
-import java.util.Collections;
 import java.util.List;
 import java.util.UUID;
 
@@ -44,12 +45,19 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
 
             // 토큰이 유효하면 인증 설정
             UUID userId = jwtTokenProvider.getUserIdFromToken(token);
-            String role = jwtTokenProvider.getRoleFromToken(token);
+
+            String role;
+            try {
+                role = jwtTokenProvider.getRoleFromToken(token);
+            } catch (JwtException e) {
+                // Role claim이 없는 토큰 (refresh token 등) → 401 Unauthorized
+                jwtAuthenticationEntryPoint.commence(request, response,
+                        new AuthenticationCredentialsNotFoundException("Token missing role claim"));
+                return;
+            }
 
             // Set authorities based on role
-            List<SimpleGrantedAuthority> authorities = role != null
-                    ? List.of(new SimpleGrantedAuthority("ROLE_" + role))
-                    : Collections.emptyList();
+            List<SimpleGrantedAuthority> authorities = List.of(new SimpleGrantedAuthority("ROLE_" + role));
 
             UsernamePasswordAuthenticationToken authentication =
                     new UsernamePasswordAuthenticationToken(userId, null, authorities);
